Compatibility to Java 8